<resources>
    <string name="app_name">My Linkedin Login</string>
    <string name="join_now">Join now</string>
    <string name="sign_in">Sign in</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me.</string>
    <string name="learn_more">Learn more</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_btn">Continue</string>
    <string name="or">OR</string>
    <string name="google_btn">Sign in with Google</string>
</resources>