<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/brand_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/vd_vector__2_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/join_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/join_now"
        android:textColor="#0A66C2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_headline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:hint="@string/email_or_phone"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_headline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/learn_more"
        android:textColor="#0A66C2"
        app:layout_constraintBottom_toBottomOf="@id/remember_me"
        app:layout_constraintStart_toEndOf="@id/remember_me"
        app:layout_constraintTop_toTopOf="@id/remember_me" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/forgot_password"
        android:textColor="#0A66C2"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/remember_me" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0A66C2"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_button" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_divider"
        app:layout_constraintEnd_toEndOf="@id/horizontal_divider"
        app:layout_constraintStart_toStartOf="@id/horizontal_divider"
        app:layout_constraintTop_toTopOf="@id/horizontal_divider" />

    <Button
        android:id="@+id/signin_google_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/google_btn"
        android:textAllCaps="false"
        android:textColor="#0A66C2"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divider"
        app:strokeColor="#0A66C2"
        app:strokeWidth="1dp" />

    <ImageView
        android:importantForAccessibility="no"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="left"
        android:src="@drawable/vd_vector__3_"
        app:layout_constraintBottom_toBottomOf="@id/signin_google_button"
        app:layout_constraintStart_toStartOf="@id/signin_google_button"
        app:layout_constraintTop_toTopOf="@id/signin_google_button" />


</androidx.constraintlayout.widget.ConstraintLayout>